--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,38 @@ Reset
     box-sizing: border-box;
 }
 
-header {
-    padding: 50px;
-    background-color: pink;
+.container {
+    padding: 27px 31px;
+    background-color: #0084fd;
+    display: flex;
+    justify-content: space-between;
+    height: 4.6875rem;
+}
+
+i {
+    font-size: 26px;
+    color: white;
+}
+
+header .container ul {
+    display: none;
+}
+
+@media screen and (min-width: 992px) {
+    .menu {
+        display: none;
+    }
+    header .container ul {
+        display: flex;
+        list-style-type: none;
+        color: white;
+    }
+    header .container ul li {
+        margin-left: 29px;
+    }
+    header .container ul li:last-child {
+        color: black;
+        background-color: white;
+    }
+    
 }
